--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIFF Profile App</title>
+    <script src="/env-config.js"></script>
     <link rel="stylesheet" href="/src/style.css">
 </head>
 
